# MPrpc

./: CMakeLists.txt  README.md  autocompile.sh
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpcprovider.cc  zookeeperutil.cc
src/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpcprovider.h  zookeeperutil.h
testapply/: user.proto
testapply/receiver/: friendservice.cc  userservice.cc
testapply/sender/: callfriendservice.cc  calluserservice.cc
